--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27
+envlist = py36
 
 [testenv]
 changedir = {envtmpdir}
@@ -7,6 +7,3 @@ deps =
     pytest
 commands =
     py.test {toxinidir}/tests --doctest-modules {posargs}
-setenv=
-    ; a workaround for OS X Mavericks bug
-    ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future
