build directly with Cython

--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,7 @@ envlist = py36
 changedir = {envtmpdir}
 deps =
     pytest
+    numpy
+    Cython
 commands =
     py.test {toxinidir}/tests --doctest-modules {posargs}
